Iniciando os testes com K6

--- a/api/src/.env
+++ b/api/src/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost/mydb
+MONGO_URL=mongodb+srv://qa:cademy@cluster0.cf1sccv.mongodb.net/UsersDB?retryWrites=true&w=majority
 TIMEOUT=2000
